--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
   "version": 2,
   "name": "delhiboneandjoints",
-  "builds": [
-    { "src": "index.php", "use": "@vercel/php" }
-  ],
+  "functions": {
+    "index.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
   "routes": [
     { "src": "/(.*)", "dest": "/index.php" }
   ]
