--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,12 @@
   "version": 2,
   "name": "delhiboneandjoints",
   "functions": {
-    "index.php": {
+    "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/index.php" }
+    { "src": "/", "dest": "/api/index.php" },
+    { "src": "/(.*)", "dest": "/api/$1.php" }
   ]
 }
