--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "name": "delhiboneandjoints",
   "functions": {
     "api/*.php": {
-      "runtime": "vercel-php"
+      "runtime": "vercel-php@0.7.0"
     }
   },
   "routes": [
